# rules_krita

./: .bazelrc  .gitattributes  .gitignore  .mypy.ini  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  bzlmod.html  index.html  print.html  rules.html  searchindex.js  searchindex.json  version.bzl
.github/: release_notes.template
.github/workflows/: release.yaml
docs/: BUILD.bazel
docs/src/: index.md
krita/: BUILD.bazel  defs.bzl  extensions.bzl  krita_export.bzl  krita_toolchain.bzl
krita/private/: BUILD.bazel  export.bzl  export_process_wrapper.py  toolchain.bzl  toolchain_repo.bzl  versions.bzl
krita/private/tests/png_export/: BUILD.bazel  smiley.kra
tools/http_appimage/: BUILD.bazel  http_appimage.bzl
tools/repo_version/: version_test.py
tools/requirements/: requirements.in  requirements_linux_x86_64.txt
tools/update_versions/: BUILD.bazel  update_versions.py
