load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_venv//python:py_binary.bzl", "py_binary")

exports_files([
    "export_process_wrapper.py",
])

py_binary(
    name = "export_process_wrapper",
    srcs = ["export_process_wrapper.py"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//krita:__pkg__"],
    deps = [
        "//tools/http_appimage",
        "//tools/http_dmg",
        "@apple_support//tools/http_dmg",
        "@rules_venv//python:defs_bzl",
    ],
)
